fix nav jumping too far

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -472,4 +478,11 @@ input[type=submit]:hover {
 
 .nav-container input[type="checkbox"]:checked ~ .logo{
   display: none;
+}
+
+:target:before {
+    content:"";
+    display:block;
+    height:20px; 
+    margin:-20px 0 0;
 }
